--- a/styles/style.css
+++ b/styles/style.css
@@ -1,76 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 .open-sans-normal {
     font-family: "Open Sans", serif;
     font-optical-sizing: auto;
     font-weight: 600px;
     font-style: normal;
     font-variation-settings:
-      "wdth" 100;
-  }
+        "wdth" 100;
+}
+
 * {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+body {
     background-color: #F5F5F5;
 }
+
 .body-bg {
     background-color: #F5F5F5;
     margin: 0px 90px;
 }
-/** shared **/
-
 
 
 /** header site **/
 /* nav */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     padding: 10px 0px 10px 0px;
 }
-.nav-title{
+
+.nav-title {
     font-size: 20px;
     font-weight: bold;
     color: #0E0E0E;
 }
-nav button{
+
+nav button {
     font-weight: 700px;
     padding: 6px 12px 6px 12px;
     color: #006A50;
     border: 1px solid green;
     border-radius: 4px;
 }
-nav button:hover{
-    background-color: rgb(242, 252, 240);
+
+nav button:hover {
+    background-color: rgb(216, 246, 210);
 }
 
 /** banner **/
-.banner-details{
+.banner-details {
     display: flex;
     justify-content: space-between;
     background-color: #C6E4D6;
     border-radius: 10px;
-    margin: 15px;
+    margin: 15px 0px 15px 0px;
+    max-width: 1100px;
+    margin: 0 auto;
 }
-.banner-content{
+
+.banner-content {
     padding-right: 120px;
     padding-left: 60px;
     padding-top: 90px;
-    padding-bottom: 70px;   
+    padding-bottom: 70px;
 }
-.banner-title{
+
+.banner-title {
     font-weight: 700;
     opacity: 30%;
     font-size: 15px;
     padding-bottom: 10px;
 }
-.banner-description{
+
+.banner-description {
     font-weight: 900;
     font-size: 28px;
     padding-bottom: 20px;
 }
-.banner-button{
+
+.banner-button {
     color: #FFFFFF;
     background-color: #006A50;
     border: none;
@@ -78,53 +89,304 @@ nav button:hover{
     padding: 13px 30px;
     font-weight: 600;
 }
-.banner-button:hover{
-    background-color: rgb(107, 129, 102);
+
+.banner-button:hover {
+    background-color: #01370d;
 }
 
-.banner-img{
+.banner-img img {
     padding: 40px 50px 40px 50px;
-}
-.banner-img img{
     width: 350px;
 }
 
 
 
 /** main site **/
+/* the vision of container */
+.vision-container {
+    display: flex;
+    gap: 24px;
+}
 
+.vision {
+    padding: 30px;
+    border-radius: 10px;
+}
 
+.vision-1 {
+    background-color: #bbd3fb;
+}
 
+.vision-2 {
+    background-color: #a1ebca;
+}
 
+.vision-3 {
+    background-color: #eeddb3;
+}
 
+.vision-title {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
+.vision-description {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: #757575;
+}
 
+.vision-button {
+    font-weight: 900px;
+    padding: 8px 15px 8px 15px;
+    color: #ffffff;
+    border: none;
+    border-radius: 7px;
 
+}
 
+.vision-button-1 {
+    background-color: #5490F5;
+}
 
+.vision-button-1:hover {
+    background-color: #045efa;
+}
 
+.vision-button-2 {
+    background-color: #09A15C;
+}
+
+.vision-button-2:hover {
+    background-color: #015d34;
+}
+
+.vision-button-3 {
+    background-color: #FFC239;
+}
+
+.vision-button-3:hover {
+    background-color: #ffb404;
+}
+
+/* recent news */
+.recent-news {
+    padding: 30px 0px 20px 0px;
+}
+
+.recent-news-container {
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.recent-news-title {
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.recent-news-description {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: #757575;
+}
+
+.recent-news-container {
+    display: flex;
+    gap: 24px;
+}
+
+.news-img img {
+    border-radius: 20px;
+}
+
+.news-heading {
+    padding-bottom: 10px;
+}
+
+.news-calender {
+    display: flex;
+    gap: 24px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 14px;
+    color: #757575;
+
+}
+
+.news-description {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: #757575;
+}
+
+.news-button {
+    background-color: #006A50;
+    font-weight: 1000px;
+    padding: 12px 20px;
+    color: #ffffff;
+    border: none;
+    border-radius: 7px;
+}
+
+.news-button:hover {
+    background-color: #01370d;
+}
+
+/* donate */
+.section-donate {
+    text-align: center;
+}
+
+.section-donate-title {
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.section-donate-description {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: #757575;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.donate-container {
+    display: flex;
+    gap: 20px;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.donate {
+    background-color: #C6E4D6;
+    padding: 20px 28px 20px 28px;
+    border-radius: 8px;
+    font-size: larger;
+    font-weight: bold;
+    border: none;
+}
+
+.donate:hover {
+    background-color: #006A50;
+}
+
+.donate-other-amount {
+    background-color: #ffffff;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 14px;
+    color: #757575;
+    border-radius: 8px;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.donate-other-amount:hover {
+    background-color: rgb(244, 232, 172);
+    font-weight: bold;
+}
+
+.donate-button {
+    background-color: #006A50;
+    font-weight: 1000px;
+    padding: 12px 20px;
+    color: #ffffff;
+    border: none;
+    border-radius: 7px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.donate-button:hover {
+    background-color: #01370d;
+}
+
+/* subscribe newslatter */
+.section-newslatter {
+    text-align: center;
+    background-color: #C6E4D6;
+    border-radius: 12px;
+    padding: 40px 0px;
+    margin: 30px 0px 40px 0px;
+}
+
+.section-newslatter-title {
+    color: #0E0E0E;
+    font-weight: bold;
+}
+
+.section-newslatter-description {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: #757575;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.newslatter-container {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 650px;
+    margin: 0 auto;
+}
+
+.search-input {
+    width: 100%;
+    border: none;
+    padding-left: 40px;
+    border-radius: 5px;
+}
+
+.newslatter-subscribe {
+    display: flex;
+    border: none;
+}
+
+.newslatter-subscribe-button {
+    background-color: #006A50;
+    font-weight: 1000px;
+    padding: 12px 20px;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+}
+
+.newslatter-subscribe-button:hover {
+    background-color: #01370d;
+}
 
 /** footer site **/
-footer{
+footer {
     background-color: #ffffff;
 }
-.footer-title{
+
+.footer-title {
     font-weight: bold;
     text-align: center;
     color: #0E0E0E;
     font-size: 25px;
     padding-top: 20px;
 }
-.footer-logo{
+
+.footer-logo {
     text-align: center;
     padding: 20px 100px 20px 100px;
 }
-.footer-horizontal-line{
+
+.footer-horizontal-line {
     font-weight: 1px;
     color: rgba(14, 14, 14, 0.1);
     opacity: 20%;
 }
-.footer-img{
+
+.footer-img {
     padding-top: 20px;
     padding-right: 10px;
 }
